--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food-delivery-backend",
+  "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -8,10 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
-    "dotenv": "^16.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "cors": "^2.8.5",
-    "bcryptjs": "^2.4.3"
+    "pg": "^8.11.1",
+    "redis": "^4.6.7",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5"
   }
 }
