--- a/web/backend/.env
+++ b/web/backend/.env
@@ -1,2 +1,7 @@
-MONGO_URI=mongodb://mongo:27017/food_delivery
-JWT_SECRET=supersecretkey
+PORT=3000
+
+# Подключение к PostgreSQL
+DB_URL=postgres://admin:password@db:5432/app
+
+# Подключение к Redis
+REDIS_URL=redis://redis:6379
