Update init/init.sql & backend

--- a/web/backend/.env
+++ b/web/backend/.env
@@ -1,9 +1,2 @@
-PORT=3000
-
-# Подключение к PostgreSQL
-DB_URL=postgres://admin:password@db:5432/app
-
-# Подключение к Redis
-REDIS_URL=redis://redis:6379
-
-JWT_SECRET=supersecretkey
+DB_URL=postgres://admin:password@db:5432/app 
+REDIS_URL=redis://redis:6379 JWT_SECRET=your_jwt_secret_key
