--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "backend",
+  "name": "order-app-backend",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.11.1",
+    "sequelize": "^6.32.1",
+    "pg": "^8.11.3",
     "redis": "^4.6.7",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
