Bug_fixes #1 (docker-compose.yml)

--- a/web/frontend/Dockerfile
+++ b/web/frontend/Dockerfile
@@ -2,11 +2,17 @@ FROM node:18
 
 WORKDIR /app
 
+# Копируем зависимости
 COPY package.json .
 RUN npm install
 
+# Копируем весь проект
 COPY . .
 
+# Проверяем наличие index.html
+RUN ls -la public/index.html || (echo "Error: public/index.html not found" && exit 1)
+
+# Выполняем сборку
 RUN npm run build
 
 EXPOSE 80
