--- a/web/frontend/Dockerfile
+++ b/web/frontend/Dockerfile
@@ -2,17 +2,16 @@ FROM node:18
 
 WORKDIR /app
 
-# Копируем зависимости
 COPY package.json .
 RUN npm install
 
-# Копируем весь проект
 COPY . .
 
-# Проверяем наличие index.html
 RUN ls -la public/index.html || (echo "Error: public/index.html not found" && exit 1)
 
-# Выполняем сборку
+# Проверка синтаксиса с поддержкой ES Modules
+RUN node --input-type=module -e "import('./src/index.js')" || (echo "Syntax error in src/index.js" && exit 1)
+
 RUN npm run build
 
 EXPOSE 80
