--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,11 @@
-events {}
-http {
-  server {
-    listen 443 ssl;
-    server_name localhost;
+server {
+  listen 80;
+  server_name localhost;
 
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location / {
-      proxy_pass http://frontend:80;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /api/ {
-      proxy_pass http://backend:3000/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
   }
 }
