--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,31 @@
-server {
-  listen 80;
-  server_name localhost;
+events {}
 
-  root /usr/share/nginx/html;
-  index index.html;
+http {
+  server {
+    listen 443 ssl;
+    server_name localhost;
 
-  location / {
-    try_files $uri $uri/ /index.html;
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+    # Проксируем frontend
+    location / {
+      proxy_pass http://frontend:80;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксируем backend API
+    location /api/ {
+      proxy_pass http://backend:3000;  # Без слеша — сохраняет /api/
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 }
