rebase to react - frontend

--- a/web/frontend/Dockerfile
+++ b/web/frontend/Dockerfile
@@ -1,14 +1,11 @@
-FROM node:18 AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
+# web/frontend/Dockerfile
+FROM node:18-alpine AS build
 
-# Production stage
-FROM node:18
 WORKDIR /app
-RUN npm install -g serve
-COPY --from=build /app/dist /app
-EXPOSE 80
-CMD ["serve", "-s", ".", "-l", "80"]
+
+COPY package.json .
+RUN npm install
+
+COPY . .
+
+RUN npm run build
