--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,4 @@
 services:
-  frontend:
-    build: ./web/frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
-    networks:
-      - app-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   backend:
     build: ./web/backend
@@ -54,13 +41,15 @@ services:
 
   redis:
     image: redis:7
+    command: redis-server --appendonly yes --requirepass redis_password
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "redis_password", "ping"]
       interval: 10s
       timeout: 5s
       retries: 3
+
 
   nginx:
     image: nginx:alpine
@@ -69,15 +58,18 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/ssl:/etc/nginx/ssl
-    depends_on:
-      frontend:
-        condition: service_healthy
-      backend:
-        condition: service_healthy
     networks:
       - app-network
-    restart: always
 
+  frontend:
+    build: ./web/frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    networks:
+      - app-network
+      
 networks:
   app-network:
     driver: bridge
