rebase to react - frontend

--- a/web/backend/Dockerfile
+++ b/web/backend/Dockerfile
@@ -1,10 +1,13 @@
+# web/backend/Dockerfile
 FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY ./requirements.txt .
+# Копирование всех файлов, включая src/ как часть пакета
+COPY . .
+
+# Установка зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./src .
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000"]
+# Запуск uvicorn с указанием полного пути к модулю
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "3000"]
