--- a/web/frontend/nginx/nginx.conf
+++ b/web/frontend/nginx/nginx.conf
@@ -1,6 +1,12 @@
-events {}
-
 http {
+  upstream frontend {
+    server frontend:80 max_fails=3 fail_timeout=30s;
+  }
+
+  upstream backend {
+    server backend:3000 max_fails=3 fail_timeout=30s;
+  }
+
   server {
     listen 443 ssl;
     server_name localhost;
@@ -8,9 +14,8 @@ http {
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/key.pem;
 
-    # Проксируем frontend
     location / {
-      proxy_pass http://frontend:80;
+      proxy_pass http://frontend;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -18,9 +23,8 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Проксируем backend API
     location /api/ {
-      proxy_pass http://backend:3000;  # Без слеша — сохраняет /api/
+      proxy_pass http://backend;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
