rebase to react - frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
 
   redis:
     image: redis:7
+    command: redis-server --appendonly yes
     networks:
       - app-network
     healthcheck:
