--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,41 @@ services:
   frontend:
     build: ./web/frontend
     ports:
-      - "443:443"
+      - "80:80"
     depends_on:
       - backend
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://localhost"]
+      test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
     environment:
       - VITE_API_URL=http://backend:3000/api
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "443:443"
+    volumes:
+      - ./web/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./web/frontend/nginx/ssl:/etc/nginx/ssl
+    depends_on:
+      frontend:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
+    networks:
+      - app-network
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:443"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
   backend:
     build: ./web/backend
@@ -62,7 +84,6 @@ services:
 
   redis:
     image: redis:7
-    command: redis-server --appendonly yes
     networks:
       - app-network
     healthcheck:
@@ -70,29 +91,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-
-  # Временное отключение сервиса nginx (если используете только frontend)
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "443:443"
-  #   volumes:
-  #     - ./web/nginx/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./web/nginx/ssl:/etc/nginx/ssl
-  #   depends_on:
-  #     frontend:
-  #       condition: service_healthy
-  #     backend:
-  #       condition: service_healthy
-  #   networks:
-  #     - app-network
-  #   restart: always
-  #   healthcheck:
-  #     test: ["CMD", "curl", "-f", "http://localhost:443"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
-  #     start_period: 20s
 
 networks:
   app-network:
