--- a/web/frontend/Dockerfile
+++ b/web/frontend/Dockerfile
@@ -24,9 +24,8 @@ FROM nginx:alpine
 # Копирование файлов сборки из предыдущего этапа
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Копирование конфигурации и сертификатов Nginx
+# Копирование конфигурации Nginx
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
-COPY nginx/ssl/ /etc/nginx/ssl/
 
 # Открытие порта
 EXPOSE 80
