--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: ./frontend
+      context: ./web/frontend
       dockerfile: Dockerfile
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - backend
     networks:
@@ -20,15 +21,15 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: ./web/backend
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
-      - DB_URL=postgres://admin:password@db:5432/app
+      - DB_URL=postgresql://admin:password@db:5432/app
       - REDIS_URL=redis://redis:6379
     env_file:
-      - ./backend/.env
+      - ./web/backend/.env
     depends_on:
       - db
       - redis
@@ -45,7 +46,7 @@ services:
     image: postgres:15
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/init/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=password
@@ -69,6 +70,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+
 
 networks:
   app-network:
